[gd_scene load_steps=9 format=3 uid="uid://7f8wciti725u"]

[ext_resource type="Script" uid="uid://bkldeaxcobewf" path="res://Minigames/General/Scripts/minigame_results.gd" id="1_o0gao"]
[ext_resource type="FontFile" uid="uid://0ru55rka61tc" path="res://MiscAssets/Fonts/HanleyPro-Sans.ttf" id="2_d1nor"]
[ext_resource type="Texture2D" uid="uid://mymgsnnh3o0d" path="res://MiscAssets/Players/Icons/Penguin.png" id="2_jmvy2"]
[ext_resource type="Texture2D" uid="uid://bb7dak3ra018a" path="res://Board/Assets/Icons/attila.png" id="4_0i0id"]
[ext_resource type="Texture2D" uid="uid://dsfoktobd7vm8" path="res://Board/Assets/Icons/credits.png" id="5_fl15g"]

[sub_resource type="Animation" id="Animation_fl15g"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Black:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_0i0id"]
resource_name = "fade_out"
length = 1.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Black:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"end"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7yxm5"]
_data = {
&"RESET": SubResource("Animation_fl15g"),
&"fade_out": SubResource("Animation_0i0id")
}

[node name="Results" type="Control"]
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 3
script = ExtResource("1_o0gao")

[node name="AP" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_7yxm5")
}

[node name="Panels" type="Control" parent="."]
anchors_preset = 0
offset_left = 40.0
offset_top = 40.0
offset_right = 80.0
offset_bottom = 80.0

[node name="B" type="ColorRect" parent="Panels"]
layout_mode = 2
offset_left = -40.0
offset_top = -40.0
offset_right = 440.0
offset_bottom = 1040.0
grow_vertical = 2
size_flags_horizontal = 3
color = Color(0, 0.262745, 1, 1)

[node name="R" type="ColorRect" parent="Panels"]
layout_mode = 2
offset_left = 440.0
offset_top = -40.0
offset_right = 920.0
offset_bottom = 1040.0
grow_vertical = 2
size_flags_horizontal = 3
color = Color(0.529412, 0.0862745, 0, 1)

[node name="G" type="ColorRect" parent="Panels"]
layout_mode = 2
offset_left = 920.0
offset_top = -40.0
offset_right = 1400.0
offset_bottom = 1040.0
grow_vertical = 2
size_flags_horizontal = 3
color = Color(0, 0.419608, 0.0745098, 1)

[node name="Y" type="ColorRect" parent="Panels"]
layout_mode = 2
offset_left = 1400.0
offset_top = -40.0
offset_right = 1880.0
offset_bottom = 1040.0
grow_vertical = 2
size_flags_horizontal = 3
color = Color(0.862745, 0.694118, 0.054902, 1)

[node name="Icons" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Icon1" type="TextureRect" parent="Icons"]
layout_mode = 2
offset_left = 40.0
offset_top = 40.0
offset_right = 440.0
offset_bottom = 440.0
size_flags_horizontal = 4
texture = ExtResource("2_jmvy2")

[node name="Icon2" type="TextureRect" parent="Icons"]
layout_mode = 2
offset_left = 520.0
offset_top = 40.0
offset_right = 920.0
offset_bottom = 440.0
size_flags_horizontal = 4
texture = ExtResource("2_jmvy2")

[node name="Icon3" type="TextureRect" parent="Icons"]
layout_mode = 2
offset_left = 1000.0
offset_top = 40.0
offset_right = 1400.0
offset_bottom = 440.0
size_flags_horizontal = 4
texture = ExtResource("2_jmvy2")

[node name="Icon4" type="TextureRect" parent="Icons"]
layout_mode = 2
offset_left = 1480.0
offset_top = 40.0
offset_right = 1880.0
offset_bottom = 440.0
size_flags_horizontal = 4
texture = ExtResource("2_jmvy2")

[node name="Placement" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Place1" type="Label" parent="Placement"]
layout_mode = 0
offset_left = 92.0
offset_top = 455.0
offset_right = 388.0
offset_bottom = 606.0
theme_override_constants/outline_size = 30
theme_override_fonts/font = ExtResource("2_d1nor")
theme_override_font_sizes/font_size = 150
text = "1st"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Place2" type="Label" parent="Placement"]
layout_mode = 0
offset_left = 572.0
offset_top = 455.0
offset_right = 868.0
offset_bottom = 606.0
theme_override_constants/outline_size = 30
theme_override_fonts/font = ExtResource("2_d1nor")
theme_override_font_sizes/font_size = 150
text = "1st"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Place3" type="Label" parent="Placement"]
layout_mode = 0
offset_left = 1052.0
offset_top = 455.0
offset_right = 1348.0
offset_bottom = 606.0
theme_override_constants/outline_size = 30
theme_override_fonts/font = ExtResource("2_d1nor")
theme_override_font_sizes/font_size = 150
text = "1st"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Place4" type="Label" parent="Placement"]
layout_mode = 0
offset_left = 1532.0
offset_top = 455.0
offset_right = 1828.0
offset_bottom = 606.0
theme_override_constants/outline_size = 30
theme_override_fonts/font = ExtResource("2_d1nor")
theme_override_font_sizes/font_size = 150
text = "1st"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Winnings" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_left = 15.0
offset_top = 601.0
offset_right = 55.0
offset_bottom = 641.0

[node name="Winnings1" type="Label" parent="Winnings"]
layout_mode = 0
offset_right = 448.0
offset_bottom = 257.0
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("2_d1nor")
theme_override_font_sizes/font_size = 75
text = "+$10
Bonus
+$10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Winnings2" type="Label" parent="Winnings"]
layout_mode = 0
offset_left = 480.0
offset_right = 928.0
offset_bottom = 257.0
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("2_d1nor")
theme_override_font_sizes/font_size = 75
text = "+$10
Bonus
+$10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Winnings3" type="Label" parent="Winnings"]
layout_mode = 0
offset_left = 960.0
offset_right = 1408.0
offset_bottom = 257.0
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("2_d1nor")
theme_override_font_sizes/font_size = 75
text = "+$10
Bonus
+$10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Winnings4" type="Label" parent="Winnings"]
layout_mode = 0
offset_left = 1440.0
offset_right = 1888.0
offset_bottom = 257.0
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("2_d1nor")
theme_override_font_sizes/font_size = 75
text = "+$10
Bonus
+$10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StarLabels" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_left = 15.0
offset_top = 601.0
offset_right = 55.0
offset_bottom = 641.0

[node name="starlabel1" type="Label" parent="StarLabels"]
layout_mode = 0
offset_left = 239.0
offset_top = 278.9
offset_right = 363.0
offset_bottom = 347.9
theme_override_constants/outline_size = 9
theme_override_fonts/font = ExtResource("2_d1nor")
theme_override_font_sizes/font_size = 68
text = "0"

[node name="starlabel2" type="Label" parent="StarLabels"]
layout_mode = 0
offset_left = 719.0
offset_top = 278.9
offset_right = 843.0
offset_bottom = 347.9
theme_override_constants/outline_size = 9
theme_override_fonts/font = ExtResource("2_d1nor")
theme_override_font_sizes/font_size = 68
text = "0"

[node name="starlabel3" type="Label" parent="StarLabels"]
layout_mode = 0
offset_left = 1199.0
offset_top = 278.9
offset_right = 1323.0
offset_bottom = 347.9
theme_override_constants/outline_size = 9
theme_override_fonts/font = ExtResource("2_d1nor")
theme_override_font_sizes/font_size = 68
text = "0"

[node name="starlabel4" type="Label" parent="StarLabels"]
layout_mode = 0
offset_left = 1679.0
offset_top = 278.9
offset_right = 1803.0
offset_bottom = 347.9
theme_override_constants/outline_size = 9
theme_override_fonts/font = ExtResource("2_d1nor")
theme_override_font_sizes/font_size = 68
text = "0"

[node name="CoinLabels" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_left = 15.0
offset_top = 601.0
offset_right = 55.0
offset_bottom = 641.0

[node name="coinslabel1" type="Label" parent="CoinLabels"]
layout_mode = 0
offset_left = 201.0
offset_top = 374.9
offset_right = 325.0
offset_bottom = 443.9
theme_override_constants/outline_size = 9
theme_override_fonts/font = ExtResource("2_d1nor")
theme_override_font_sizes/font_size = 68
text = "$17"

[node name="coinslabel2" type="Label" parent="CoinLabels"]
layout_mode = 0
offset_left = 681.0
offset_top = 374.9
offset_right = 805.0
offset_bottom = 443.9
theme_override_constants/outline_size = 9
theme_override_fonts/font = ExtResource("2_d1nor")
theme_override_font_sizes/font_size = 68
text = "$17"

[node name="coinslabel3" type="Label" parent="CoinLabels"]
layout_mode = 0
offset_left = 1161.0
offset_top = 374.9
offset_right = 1285.0
offset_bottom = 443.9
theme_override_constants/outline_size = 9
theme_override_fonts/font = ExtResource("2_d1nor")
theme_override_font_sizes/font_size = 68
text = "$17"

[node name="coinslabel4" type="Label" parent="CoinLabels"]
layout_mode = 0
offset_left = 1641.0
offset_top = 374.9
offset_right = 1765.0
offset_bottom = 443.9
theme_override_constants/outline_size = 9
theme_override_fonts/font = ExtResource("2_d1nor")
theme_override_font_sizes/font_size = 68
text = "$17"

[node name="Static" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="coinsicon1" type="Sprite2D" parent="Static"]
position = Vector2(162, 1008.9)
scale = Vector2(0.12, 0.12)
texture = ExtResource("4_0i0id")

[node name="coinsicon2" type="Sprite2D" parent="Static"]
position = Vector2(642, 1008.9)
scale = Vector2(0.12, 0.12)
texture = ExtResource("4_0i0id")

[node name="coinsicon3" type="Sprite2D" parent="Static"]
position = Vector2(1122, 1008.9)
scale = Vector2(0.12, 0.12)
texture = ExtResource("4_0i0id")

[node name="coinsicon4" type="Sprite2D" parent="Static"]
position = Vector2(1602, 1008.9)
scale = Vector2(0.12, 0.12)
texture = ExtResource("4_0i0id")

[node name="staricon1" type="Sprite2D" parent="Static"]
position = Vector2(195, 905.25)
scale = Vector2(0.285, 0.285)
texture = ExtResource("5_fl15g")

[node name="staricon2" type="Sprite2D" parent="Static"]
position = Vector2(675, 905.25)
scale = Vector2(0.285, 0.285)
texture = ExtResource("5_fl15g")

[node name="staricon3" type="Sprite2D" parent="Static"]
position = Vector2(1155, 905.25)
scale = Vector2(0.285, 0.285)
texture = ExtResource("5_fl15g")

[node name="staricon4" type="Sprite2D" parent="Static"]
position = Vector2(1635, 905.25)
scale = Vector2(0.285, 0.285)
texture = ExtResource("5_fl15g")

[node name="StarLabelsEnd" type="Control" parent="."]
anchors_preset = 0
offset_left = 15.0
offset_top = 601.0
offset_right = 55.0
offset_bottom = 641.0

[node name="starlabel1" type="Label" parent="StarLabelsEnd"]
visible = false
layout_mode = 0
offset_left = 229.0
offset_top = 82.0
offset_right = 353.0
offset_bottom = 168.0
theme_override_constants/outline_size = 11
theme_override_fonts/font = ExtResource("2_d1nor")
theme_override_font_sizes/font_size = 85
text = "0"

[node name="starlabel2" type="Label" parent="StarLabelsEnd"]
visible = false
layout_mode = 0
offset_left = 709.0
offset_top = 82.0
offset_right = 833.0
offset_bottom = 168.0
theme_override_constants/outline_size = 11
theme_override_fonts/font = ExtResource("2_d1nor")
theme_override_font_sizes/font_size = 85
text = "0"

[node name="starlabel3" type="Label" parent="StarLabelsEnd"]
visible = false
layout_mode = 0
offset_left = 1189.0
offset_top = 82.0
offset_right = 1313.0
offset_bottom = 168.0
theme_override_constants/outline_size = 11
theme_override_fonts/font = ExtResource("2_d1nor")
theme_override_font_sizes/font_size = 85
text = "0"

[node name="starlabel4" type="Label" parent="StarLabelsEnd"]
visible = false
layout_mode = 0
offset_left = 1669.0
offset_top = 82.0
offset_right = 1793.0
offset_bottom = 168.0
theme_override_constants/outline_size = 11
theme_override_fonts/font = ExtResource("2_d1nor")
theme_override_font_sizes/font_size = 85
text = "0"

[node name="CoinLabelsEnd" type="Control" parent="."]
anchors_preset = 0
offset_left = 15.0
offset_top = 601.0
offset_right = 55.0
offset_bottom = 641.0

[node name="coinslabel1" type="Label" parent="CoinLabelsEnd"]
visible = false
layout_mode = 0
offset_left = 211.0
offset_top = 209.0
offset_right = 350.0
offset_bottom = 295.0
theme_override_constants/outline_size = 11
theme_override_fonts/font = ExtResource("2_d1nor")
theme_override_font_sizes/font_size = 85
text = "$17"

[node name="coinslabel2" type="Label" parent="CoinLabelsEnd"]
visible = false
layout_mode = 0
offset_left = 691.0
offset_top = 209.0
offset_right = 830.0
offset_bottom = 295.0
theme_override_constants/outline_size = 11
theme_override_fonts/font = ExtResource("2_d1nor")
theme_override_font_sizes/font_size = 85
text = "$17"

[node name="coinslabel3" type="Label" parent="CoinLabelsEnd"]
visible = false
layout_mode = 0
offset_left = 1171.0
offset_top = 209.0
offset_right = 1310.0
offset_bottom = 295.0
theme_override_constants/outline_size = 11
theme_override_fonts/font = ExtResource("2_d1nor")
theme_override_font_sizes/font_size = 85
text = "$17"

[node name="coinslabel4" type="Label" parent="CoinLabelsEnd"]
visible = false
layout_mode = 0
offset_left = 1651.0
offset_top = 209.0
offset_right = 1790.0
offset_bottom = 295.0
theme_override_constants/outline_size = 11
theme_override_fonts/font = ExtResource("2_d1nor")
theme_override_font_sizes/font_size = 85
text = "$17"

[node name="StaticEnd" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="coinsicon1" type="Sprite2D" parent="StaticEnd"]
visible = false
position = Vector2(149, 853.375)
scale = Vector2(0.15, 0.15)
texture = ExtResource("4_0i0id")

[node name="coinsicon2" type="Sprite2D" parent="StaticEnd"]
visible = false
position = Vector2(629, 853.375)
scale = Vector2(0.15, 0.15)
texture = ExtResource("4_0i0id")

[node name="coinsicon3" type="Sprite2D" parent="StaticEnd"]
visible = false
position = Vector2(1109, 853.375)
scale = Vector2(0.15, 0.15)
texture = ExtResource("4_0i0id")

[node name="coinsicon4" type="Sprite2D" parent="StaticEnd"]
visible = false
position = Vector2(1589, 853.375)
scale = Vector2(0.15, 0.15)
texture = ExtResource("4_0i0id")

[node name="staricon1" type="Sprite2D" parent="StaticEnd"]
visible = false
position = Vector2(177, 708.25)
scale = Vector2(0.356, 0.356)
texture = ExtResource("5_fl15g")

[node name="staricon2" type="Sprite2D" parent="StaticEnd"]
visible = false
position = Vector2(657, 708.25)
scale = Vector2(0.356, 0.356)
texture = ExtResource("5_fl15g")

[node name="staricon3" type="Sprite2D" parent="StaticEnd"]
visible = false
position = Vector2(1137, 708.25)
scale = Vector2(0.356, 0.356)
texture = ExtResource("5_fl15g")

[node name="staricon4" type="Sprite2D" parent="StaticEnd"]
visible = false
position = Vector2(1617, 708.25)
scale = Vector2(0.356, 0.356)
texture = ExtResource("5_fl15g")

[node name="Black" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 0)
